discussion/kv_engine/187203/187203_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add test program for bgsend

Change-Id: Ieb02d9d763e82c147be3b80a07c8de934108f95d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-02-22 09:58:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-22 10:53:26.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22766/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/bgsend/bgsend.cc:69:25: error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
            std::string message(1024, "x");
                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stringfwd.h:74:11: note: template is declared here
    class basic_string;
          ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22766/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/bgsend/bgsend.cc:69:25:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22766/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43784/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/programs/bgsend/bgsend.cc:69:25:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43784/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52191/ : FAILURE

Compile error at ..\kv_engine\programs\bgsend\bgsend.cc(24): fatal error C1083: Cannot open include file: "netinet/in.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52191/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33240/ : FAILURE

Compile error at [2023-02-22T10:14:18.950Z] ../kv_engine/programs/bgsend/bgsend.cc:69:25:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33240/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1550/ : FAILURE

Compile error at [2023-02-22T10:05:16.594Z] ../platform/include/hdrhistogram/hdrhistogram.h:29:10:
fatal error: hdr_histogram.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1550/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12576/ : FAILURE

Compile error at [2023-02-22T10:06:49.347Z] ../kv_engine/programs/bgsend/bgsend.cc:69:32:
error: variable ?std::string message? has initializer but incomplete type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12576/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12496/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12496/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24823/ : FAILURE

Compile error at [2023-02-22T10:09:32.398Z] ../kv_engine/programs/bgsend/bgsend.cc:69:32:
error: variable ?std::string message? has initializer but incomplete type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24823/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26132/ : FAILURE

Compile error at [2023-02-22T10:08:21.442Z] ../kv_engine/programs/bgsend/bgsend.cc:69:25:
error: implicit instantiation of undefined template "std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26132/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25270/ : FAILURE

Compile error at [2023-02-22T10:10:36.601Z] ../kv_engine/programs/bgsend/bgsend.cc:69:32:
error: variable ?std::string message? has initializer but incomplete type
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25270/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22919/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24387/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
